# InsightFixer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
data/: ai_test_bug_report.txt  ai_test_user_feedback.txt
insightfixer/api/: __init__.py  v1.py
insightfixer/common/: prompt.py
insightfixer/core/: __init__.py  internal_agent.py
insightfixer/ingestion/: ingest_data.py
insightfixer/tools/: issue_summarizer.py  qa_tool.py  search_tool.py
src/: main.py
src/api/: __init__.py  v1.py
src/common/: __init__.py  constant.py  prompt.py
src/core/: __init__.py  embeddings.py  internal_agent.py  qdrant_client.py
src/ingestion/: ingest_data.py
src/tools/: __init__.py  issue_summarizer.py  issue_summarizer_tool.py  qa_tool.py  qdrant_search_tool.py  search_tool.py
