[tool.poetry]
name = "insightfixer"
version = "0.1.0"
description = ""
authors = ["Kiattiphum suwanarsa"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
qdrant-client = ">=1.14.2,<2.0.0"
langchain = { version = ">=0.3.25,<0.4.0", extras = ["anthropic"] }
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
openai = ">=1.82.1,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
langchain-community = ">=0.3.24,<0.4.0"
tiktoken = ">=0.9.0,<0.10.0"
langgraph = ">=0.4.7,<0.5.0"
langchain-openai = ">=0.3.19,<0.4.0"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
